fixed overflow of menu-tab-items

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -166,6 +166,10 @@
 
  /* #endregion */
 
+ .ui.secondary.pointing.menu{
+     overflow: auto;
+ }
+
  /*#region Footer styling */
 
  .footer
